@@ -1,3 +1,4 @@
-EBUILD eselect-ctags-9999.ebuild 769 RMD160 eb20918f2d6a5e61bd07ae7de409090d2d3d717e SHA1 502ee583f37c88170490e92663af1b874ce04824 SHA256 c36580dde90093f300e9b0b75f024d436b853ca8c0d79d1bf74f7f377d106486
-MISC ChangeLog 270 RMD160 1b133ed0d82f9a1f57919b71b274c80b3a585cdb SHA1 fa6aed710cab5343f285cc9ecf58d40687eb1070 SHA256 bd7f00c899e28a36870a6b7e1faf28d0d808c24c09f5d0fc0b5004b609a5f669
+DIST eselect-emacs-1.4_pre1.tar.bz2 7381 RMD160 3ec4df30bc528ee931df2fdca0e843cfeaf91cee SHA1 f75c80e9c0b5af11d9a5c258c4298de9bfdbe024 SHA256 18d0359430026dddf043bc2a6db728de0e8f6cf374a36089fdf9458e542b5fbc
+EBUILD eselect-ctags-1.4_pre1.ebuild 742 RMD160 6ec8e985264176ae7d62fc5f4b8005352ea9d940 SHA1 00137883a6456360dd10ead51be7bc17603da282 SHA256 b7593b51148cb932a9dbf8fca7363d5020f099ba786102a837d90370dcf7c4f3
+MISC ChangeLog 434 RMD160 f30f3ed49d48320efebd22f40f5ba1fbbb9587f0 SHA1 0e45af3a6dee4ba05fb10a64461ebe3caa4735c7 SHA256 78379ab87306b34f872d2048d898d1a56d6ee16c4228bfc6275ae8f6b1fa7819
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
