@@ -1,3 +1,5 @@
-EBUILD eselect-emacs-9999.ebuild 905 RMD160 235e8be13739cdf373b7e48588998ef0c184fe3c SHA1 66fe06c711c08b0f5bda35edc8075578c60509cd SHA256 3bac5377ffe9054e41097a75efdcdcaecd67ae6ab9390edd72e311f85f068a43
-MISC ChangeLog 388 RMD160 1ed7c453d1633d3971b25c4c591d96b29d8c81ae SHA1 1f7982107cbeb6ffc3ef6542d8a826e7de5eee25 SHA256 81bf258821a4ca48d64e2ed5663b16775f0d861b85328d35350b52810b2e60d9
+AUX emacs-updater 2880 RMD160 670ba0b40d7c957d1ebf7a61ef6f37205569a721 SHA1 f80a4a5127f1d54494a3b1f3e842f17bd96ba0a1 SHA256 dfdf65efad666f5133e9d2cfdefae31589618de1addd2ae3057cb708ce493f5e
+DIST eselect-emacs-1.4_pre1.tar.bz2 7381 RMD160 3ec4df30bc528ee931df2fdca0e843cfeaf91cee SHA1 f75c80e9c0b5af11d9a5c258c4298de9bfdbe024 SHA256 18d0359430026dddf043bc2a6db728de0e8f6cf374a36089fdf9458e542b5fbc
+EBUILD eselect-emacs-1.4_pre1.ebuild 780 RMD160 01251c6ccc3a02133df04fc2bd31d99757441f86 SHA1 7cf124e21c7c12b364102dac07f84cd076e40173 SHA256 721f7747d7dfe68fb05d6fac394494d9293219484e233785ce8006100303a908
+MISC ChangeLog 573 RMD160 dbb30ad12c22cd4d62be67d316def17101c4708b SHA1 df3720754a605c6c38b03a0d4b40ae909753f7e2 SHA256 51b12cde4116db9fba456fabc717d93f3b469d9955b115a65bd769e649688b41
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
